# tinymodel

./: .gitignore  README.md  pyproject.toml  testing.ipynb
tiny_model/: __init__.py  lm.py  lm_modules.py  model.py  sparse_mlp.py  tokenization.py  ts_tok_ids_to_neo.pt
tiny_model/tokenization/: neo_tok_ids_to_ts.pt  tokenization.py  words.json
tinymodel/: __init__.py  lm.py  lm_modules.py  sparse_mlp.py
tinymodel/tokenization/: tokenization.py
