[tool.poetry]
name = "tinystoriesmodel"
version = "0.1.2"
description = ""
authors = ["Noa Nabeshima <noanabeshima@gmail.com>"]
readme = "README.md"
packages = [{include = "tiny_model"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
numpy = "^1.26.4"
tqdm = "^4.66.4"
einops = "^0.8.0"
transformers = "^4.41.2"
unidecode = "^1.3.8"
huggingface-hub = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
